# calibrate

./: .gitignore  CMakeLists.txt  convert_camera_data.yml  extrinsics.yml  in_VID5.xml  intrinsics.yml  main.cpp  out_camera_data.xml  out_camera_data.yml  pic_list.xml  readme.md  record.txt  stereo_calib.xml  t.xml
B/: CMakeLists.txt  b.cpp  b.h
get_pose/: CMakeLists.txt  get_pose.cpp  get_pose.h  out_camera_data.xml
